[package]
name = "dtlog"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/dtlog"
homepage = "https://github.com/al8n/dtlog"
documentation = "https://docs.rs/dtlog"
description = "A log for tracking discard stats for multi-files databases."
license = "MIT OR Apache-2.0"
rust-version = "1.81.0"
keywords = ["log", "database", "discard", "stats", "lsm"]
categories = ["data-structures", "database-implementations", "development-tools", "no_std"]

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["std"]
alloc = []
std = []

[dependencies]

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
] }
